@@ -2,33 +2,29 @@ package com.ervin.EZSpring.Utils.BaseUtils.CoreUtils;
 
 public class PkgTypeUtils {
     static String getBoxAPI(){
-        return
-            """
-                new Integer();
-                Integer.valueOf()
-                intValue()
-                byteValue();
-                longValue();
-                floatValue();
-                doubleValue();
-                Integer.toString(数字, 进制)
-                Integer.toHexString(数字)
-                Integer.toOctalString(数字)
-                Integer.toBinaryString(数字) 
-                Byte.toUnsignedInt()
-            """;
+        return "";
+//        new Integer();
+//        Integer.valueOf()
+//        intValue()
+//        byteValue();
+//        longValue();
+//        floatValue();
+//        doubleValue();
+//        Integer.toString(数字, 进制)
+//        Integer.toHexString(数字)
+//        Integer.toOctalString(数字)
+//        Integer.toBinaryString(数字)
+//        Byte.toUnsignedInt()
     }
 
     static String getConstValAPI(){
-        return
-            """
-                Boolean.TRUE
-                Boolean.FALSE
-                Integer.MAX_VALUE
-                Integer.MIN_VALUE
-                Long.SIZE
-                Long.BYTES
-            """;
+        return "";
+//        Boolean.TRUE
+//        Boolean.FALSE
+//        Integer.MAX_VALUE
+//        Integer.MIN_VALUE
+//        Long.SIZE
+//        Long.BYTES
     }
 
 }
